frontend/src/styles.css
@import 'tailwindcss';

@import 'tw-animate-css';

@custom-variant dark (&:is(.dark *));

@plugin "@tailwindcss/typography";

body {
  @apply m-0;
  font-family:
    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family:
    source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

:root {
  --background: oklch(1 0 0);
  --foreground: oklch(0.2686 0.0032 34.85);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.2686 0.0032 34.85);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.2686 0.0032 34.85);
  --primary: oklch(0.5827 0.2418 12.23);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.9567 0.0021 34.31);
  --secondary-foreground: oklch(0.2686 0.0032 34.85);
  --muted: oklch(0.9851 0.001 33.69);
  --muted-foreground: oklch(0.4423 0.004 36.92);
  --accent: oklch(0.9851 0.001 33.69);
  --accent-foreground: oklch(0.2686 0.0032 34.85);
  --destructive: oklch(0.577 0.245 27.325);
  --destructive-foreground: oklch(0.577 0.245 27.325);
  --border: oklch(0.9227 0.0029 34.49);
  --input: oklch(0.8696 0.0034 34.89);
  --ring: oklch(0.5827 0.2418 12.23);
  --chart-1: oklch(0.5827 0.2418 12.23);
  --chart-2: oklch(0.8938 0.0563 3.77);
  --chart-3: oklch(0.7135 0.1879 7.69);
  --chart-4: oklch(0.8131 0.1129 5.67);
  --chart-5: oklch(0.9429 0.0283 5.52);
  --radius: 1rem;
  --sidebar: oklch(0.9567 0.0021 34.31);
  --sidebar-foreground: oklch(0.2686 0.0032 34.85);
  --sidebar-primary: oklch(0.5827 0.2418 12.23);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.9227 0.0029 34.49);
  --sidebar-accent-foreground: oklch(0.2686 0.0032 34.85);
  --sidebar-border: oklch(0.9227 0.0029 34.49);
  --sidebar-ring: oklch(0.5827 0.2418 12.23);
  --base-50: oklch(0.9851 0.001 33.69);
  --base-100: oklch(0.9567 0.0021 34.31);
  --base-200: oklch(0.9227 0.0029 34.49);
  --base-300: oklch(0.8696 0.0034 34.89);
  --base-400: oklch(0.7088 0.0038 34.83);
  --base-500: oklch(0.5543 0.0041 35.95);
  --base-600: oklch(0.4423 0.004 36.92);
  --base-700: oklch(0.3731 0.0037 36.25);
  --base-800: oklch(0.2686 0.0032 34.85);
  --base-900: oklch(0.212 0.0029 34.69);
  --base-950: oklch(0.1463 0.0027 33.58);
  --base-1000: oklch(0.1036 0.0021 33.95);
  --primary-50: oklch(0.9698 0.0142 5.62);
  --primary-100: oklch(0.9429 0.0283 5.52);
  --primary-200: oklch(0.8938 0.0563 3.77);
  --primary-300: oklch(0.8131 0.1129 5.67);
  --primary-400: oklch(0.7135 0.1879 7.69);
  --primary-500: oklch(0.6476 0.2348 10.36);
  --primary-600: oklch(0.5827 0.2418 12.23);
  --primary-700: oklch(0.5166 0.2131 12.28);
  --primary-800: oklch(0.4559 0.1801 10);
  --primary-900: oklch(0.4096 0.1512 7.52);
  --primary-950: oklch(0.2741 0.1016 9.26);
  --primary-1000: oklch(0.1861 0.0693 10.39);
}

.dark {
  --background: oklch(0.1463 0.0027 33.58);
  --foreground: oklch(0.9227 0.0029 34.49);
  --card: oklch(0.1463 0.0027 33.58);
  --card-foreground: oklch(0.9227 0.0029 34.49);
  --popover: oklch(0.1463 0.0027 33.58);
  --popover-foreground: oklch(0.9227 0.0029 34.49);
  --primary: oklch(0.5827 0.2418 12.23);
  --primary-foreground: oklch(1 0 0);
  --secondary: oklch(0.2686 0.0032 34.85);
  --secondary-foreground: oklch(0.9227 0.0029 34.49);
  --muted: oklch(0.212 0.0029 34.69);
  --muted-foreground: oklch(0.7088 0.0038 34.83);
  --accent: oklch(0.212 0.0029 34.69);
  --accent-foreground: oklch(0.9227 0.0029 34.49);
  --destructive: oklch(0.396 0.141 25.723);
  --destructive-foreground: oklch(0.637 0.237 25.331);
  --border: oklch(0.2686 0.0032 34.85);
  --input: oklch(0.3731 0.0037 36.25);
  --ring: oklch(0.5827 0.2418 12.23);
  --chart-1: oklch(0.5827 0.2418 12.23);
  --chart-2: oklch(0.8938 0.0563 3.77);
  --chart-3: oklch(0.7135 0.1879 7.69);
  --chart-4: oklch(0.8131 0.1129 5.67);
  --chart-5: oklch(0.9429 0.0283 5.52);
  --sidebar: oklch(0.212 0.0029 34.69);
  --sidebar-foreground: oklch(0.9227 0.0029 34.49);
  --sidebar-primary: oklch(0.5827 0.2418 12.23);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.2686 0.0032 34.85);
  --sidebar-accent-foreground: oklch(0.9227 0.0029 34.49);
  --sidebar-border: oklch(0.2686 0.0032 34.85);
  --sidebar-ring: oklch(0.5827 0.2418 12.23);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-base-50: var(--base-50);
  --color-base-100: var(--base-100);
  --color-base-200: var(--base-200);
  --color-base-300: var(--base-300);
  --color-base-400: var(--base-400);
  --color-base-500: var(--base-500);
  --color-base-600: var(--base-600);
  --color-base-700: var(--base-700);
  --color-base-800: var(--base-800);
  --color-base-900: var(--base-900);
  --color-base-950: var(--base-950);
  --color-base-1000: var(--base-1000);
  --color-primary-50: var(--primary-50);
  --color-primary-100: var(--primary-100);
  --color-primary-200: var(--primary-200);
  --color-primary-300: var(--primary-300);
  --color-primary-400: var(--primary-400);
  --color-primary-500: var(--primary-500);
  --color-primary-600: var(--primary-600);
  --color-primary-700: var(--primary-700);
  --color-primary-800: var(--primary-800);
  --color-primary-900: var(--primary-900);
  --color-primary-950: var(--primary-950);
  --color-primary-1000: var(--primary-1000);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  :root {
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }

  .dark {
    --sidebar-background: 240 5.9% 10%;
    --sidebar-foreground: 240 4.8% 95.9%;
    --sidebar-primary: 0 0% 98%;
    --sidebar-primary-foreground: 240 5.9% 10%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
}

